# GEOSmie

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  bandaverage.py  cmake_it  compile_all.sh  components.yaml  convertkernels.py  dointegration.py  generate_geos_optics.sh  hydrophobic.py  particleparams.py  readme_json.txt  runbands.py  runkernelconversion.py  runoptics.py
api/geosmie/: mietable.py
data/: refrac.water.txt  ri-brc.wsv
data/kernel_shape_dist/: preintegrated.txt  (+4 more)
geosparticles/: bc.json  du-grasp_spheroid-lognormal.json  du-grasp_spheroid.json  du-grasp_spheroid_sphere.json  du-mie.json  du.json  dusphere.json  ni.json  oc.json  ss.json  su.json
gsf/: convertncdf.py  howto_compile  params.h  rungsf.py
namelists/: geos.txt  geos_bands.txt  geos_dust.txt  geos_dust_bands.legacy.txt  geos_dust_bands.txt  geos_nodust.txt  geos_nodust_bands.legacy.txt  geos_nodust_bands.txt
scripts/: README.md  a.out  proc.v2.0.0.csh  proc.v2.0.0.csh~  runbands.py  tempfile0.txt  tempfile0.txt.expan_coeff  tempfile0.txt.expan_matr
src/: CMakeLists.txt
src/geosmie/: CMakeLists.txt  bandaverage.py  carma_utils.py  dointegration.py  geosmie_runoptics.j  geosmie_setup.py  particleparams.py  runbands.py  runkernelconversion.py  runoptics.py
src/geosmie/data/: ri-brc-lowabs3.wsv  ri-du_balkanski.wsv  ri-du_balkanski27.wsv  ri-du_woodward.wsv  ri-dust.wsv  ri-nitrate.wsv
src/geosmie/data/kernel_shape_dist/: spheroid_sphere.txt
src/geosmie/data/kernelconversion/: grasp.json
src/geosmie/namelists/: geos_nodust_bands.txt
utils/: eval_gsfun.py
(+69 files in other folders)
